--- a/package.json
+++ b/package.json
@@ -2,16 +2,29 @@
 	"dependencies": {
 		"@inquirer/prompts": "^7.3.1",
 		"fs": "^0.0.1-security",
-		"qr-image": "^3.2.0"
+		"jest": "^29.2.2",
+		"qr-image": "^3.2.0",
+		"ts-jest": "^29.2.5"
 	},
 	"name": "create-qr-code",
 	"version": "1.0.0",
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"author": "andi g",
 	"license": "ISC",
-	"description": ""
+	"description": "",
+	"devDependencies": {
+		"@babel/core": "^7.26.8",
+		"@babel/preset-env": "^7.26.8",
+		"@types/jest": "^29.5.14",
+		"babel-jest": "^29.7.0",
+		"esm": "^3.2.25",
+		"jest": "^29.7.0"
+	},
+	"transform": {
+		"^.+\\.js$": "babel-jest"
+	}
 }
